# HN_WB

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  country_pack.py  db.py  llm.py  main.py
backend/app/routers/: opportunities.py  policy.py  readiness.py  skills.py
backend/app/services/: cv_parser.py  opportunities.py  passport.py  policy.py  readiness.py  skills_engine.py
backend/data/seed/: frey_osborne_seed.csv  frey_osborne_seed.source.yaml  ilostat_wages_seed.csv  ilostat_wages_seed.source.yaml  isco_wage_tiers.csv  isco_wage_tiers.source.yaml  wdi_seed.csv  wdi_seed.source.yaml  wittgenstein_seed.csv  wittgenstein_seed.source.yaml
backend/scripts/: ingest_all.py  ingest_esco.py  ingest_frey_osborne.py  ingest_ilostat.py  ingest_seed.py  ingest_wdi.py  ingest_wittgenstein.py
docs/: data-sources.md  pitch.md  strategy.md  technical.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/policy/: page.tsx
frontend/src/app/youth/: page.tsx
frontend/src/lib/: api.ts  i18n.ts  storage.ts
packs/: GH.yaml  PK.yaml  schema.json
